tests/incremental_cycle/incremental_cycle.exp
Error --------------------------------------------------------------------------------------------------------- B.js:5:1

Cannot extend `A` [1] with `B` because `C` [2] is incompatible with string [3] in property `c`.

   B.js:5:1
      v------------------
   5| class B extends A {
   6|   c: C;
   7| }
      ^

References:
   B.js:5:17
   5| class B extends A {
                      ^ [1]
   B.js:6:6
   6|   c: C;
           ^ [2]
   A.js:5:6
   5|   c: string;
           ^^^^^^ [3]


Error --------------------------------------------------------------------------------------------------------- C.js:5:1

Cannot extend `A` [1] with `C` because `B` [2] is incompatible with number [3] in property `b`.

   C.js:5:1
      v------------------
   5| class C extends A {
   6|   b: B;
   7| }
      ^

References:
   C.js:5:17
   5| class C extends A {
                      ^ [1]
   C.js:6:6
   6|   b: B;
           ^ [2]
   A.js:4:6
   4|   b: number;
           ^^^^^^ [3]



Found 2 errors
Error --------------------------------------------------------------------------------------------------------- C.js:5:1

Cannot extend `A` [1] with `C` because string [2] is incompatible with number [3] in property `b`.

   C.js:5:1
      v------------------
   5| class C extends A {
   6|   b: B;
   7| }
      ^

References:
   C.js:5:17
   5| class C extends A {
                      ^ [1]
   C.js:6:6
   6|   b: B;
           ^ [2]
   A.js:4:6
   4|   b: number;
           ^^^^^^ [3]



Found 1 error
Error --------------------------------------------------------------------------------------------------------- C.js:5:1

Cannot extend `A` [1] with `C` because string [2] is incompatible with number [3] in property `b`.

   C.js:5:1
      v------------------
   5| class C extends A {
   6|   b: B;
   7| }
      ^

References:
   C.js:5:17
   5| class C extends A {
                      ^ [1]
   C.js:6:6
   6|   b: B;
           ^ [2]
   A.js:4:6
   4|   b: number;
           ^^^^^^ [3]



Found 1 error
Error --------------------------------------------------------------------------------------------------------- C.js:5:1

Cannot extend `A` [1] with `C` because string [2] is incompatible with number [3] in property `b`.

   C.js:5:1
      v------------------
   5| class C extends A {
   6|   b: B;
   7| }
      ^

References:
   C.js:5:17
   5| class C extends A {
                      ^ [1]
   C.js:6:6
   6|   b: B;
           ^ [2]
   A.js:4:6
   4|   b: number;
           ^^^^^^ [3]



Found 1 error
